git-annex (5.20140108) UNRELEASED; urgency=medium

  * Added tahoe special remote.
  * external special remote protocol: Added GETGITDIR, and GETAVAILABILITY.
  * Android: Avoid passing --clobber to busybox wget.
  * Refuse to build with git older than 1.7.1.1, which is needed for
    git checkout -B
  * map: Fix display of v5 direct mode repos.

 -- Joey Hess <joeyh@debian.org>  Wed, 08 Jan 2014 13:13:54 -0400

git-annex (5.20140107) unstable; urgency=medium

  * mirror: Support --all (and --unused).
  * external special remote protocol: Added GETUUID, GETWANTED, SETWANTED,
    SETSTATE, GETSTATE, DEBUG.
  * Windows: Fix bug in direct mode merge code that could cause files
    in subdirectories to go missing.
  * Windows: Avoid eating stdin when running ssh to add a authorized key,
    since this is used for password prompting.
  * Avoid looping if long-running git cat-file or git hash-object crashes
    and keeps crashing when restarted.
  * Assistant: Remove stale MERGE_HEAD files in lockfile cleanup.
  * Remotes can now be made read-only, by setting remote.<name>.annex-readonly
  * wanted, schedule: Avoid printing "ok" after requested value.
  * assistant: Ensure that .ssh/config and .ssh/authorized_keys are not
    group or world writable when writing to those files, as that can make
    ssh refuse to use them, if it allows another user to write to them.
  * addurl, importfeed: Honor annex.diskreserve as long as the size of the
    url can be checked.
  * add: Fix rollback when disk is completely full.
  * assistant: Fixed several minor memory leaks that manifested when
    adding a large number of files.
  * assistant: Start a new git-annex transferkeys process
    after a network connection change, so that remotes that use a persistent
    network connection are restarted.
  * Adjust Debian build deps to match current state of sparc, mipsel.

 -- Joey Hess <joeyh@debian.org>  Tue, 07 Jan 2014 12:22:18 -0400

git-annex (5.20131230) unstable; urgency=medium
